# OOP_lab_05

./: CMakeLists.txt  readme5.md
include/: queue.h
src/: main.cpp
tests/: test.cpp
